--- a/Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
+++ b/Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
@@ -7,7 +7,8 @@
       "provenance": [],
       "collapsed_sections": [
         "Y06xIdG26kRF"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -28,6 +29,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/luckyj23/Bike-sharing-Demand-prediction/blob/main/Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
